<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EsriMap">

    <EditText
        android:id="@+id/editText_longitude"
        android:hint="@string/longitude"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:inputType="number"
        android:text="-2.72"
        android:visibility="visible" />


    <EditText
        android:id="@+id/editText_latitude"
        android:hint="@string/latitude"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:inputType="number"
        android:text="56.065"
        android:visibility="visible" />


    <Button
        android:id="@+id/uploadBT"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@color/colorAccent"
        android:text="@string/shangchuan"
        />

    <Button
        android:id="@+id/drawBT"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="60dp"
        android:background="@color/colorAccent"
        android:text="@string/xianshi"
        />
    <Button
        android:id="@+id/clearBT"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="120dp"
        android:background="@color/colorAccent"
        android:text="@string/qingkong"
        />

    <com.esri.arcgisruntime.mapping.view.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp">
    </com.esri.arcgisruntime.mapping.view.MapView>

</FrameLayout>